--- a/content/code/2019-03-24-self-hosted-gitea-drone.adoc
+++ b/content/code/2019-03-24-self-hosted-gitea-drone.adoc
@@ -1,7 +1,7 @@
 ---
 title: Hosting Gitea and Drone with Docker
 date: 2019-03-24
-tags: [azure, gitea, drone, CI/CD]
+tags: [azure, gitea, drone, CI/CD, docker]
 author: anoff
 resizeImages: true
 draft: false
