--- a/content/code/2019-09-autoscaling-ci-agent-with-azure-kubernetes.adoc
+++ b/content/code/2019-09-autoscaling-ci-agent-with-azure-kubernetes.adoc
@@ -26,6 +26,7 @@ The easy answer: _To learn how things work_
 The real answer: I could not find a CI system that fulfills all my requirements.
 What I need the CI infrastructure to be capable of:
 
+. provide real _pay per use_ where idle time is reduced
 . support Linux and Windows agents
 . run on specific VMs with special hardware requirements (CPU, GPU, disks)
 . share specific volumes between all runners e.g. cache files
@@ -46,30 +47,229 @@ image::blackbox.png[A new job triggers the creation of a new CI agent]
 
 With Azure Pipelines as the CI system in place the open variables are knowing how many agents to host, manage their lifecycle and how to host them.
 
-== Hosting the Azure agent
+== Hosting the build agent
 
 There are two ways to host your own agents for Azure Pipelines.
 One is getting the client code and put it on your virtual machine which is described in link:https://docs.microsoft.com/en-us/azure/devops/pipelines/agents/v2-linux?view=azure-devops["Self-hosted Linux agents"] article in the azure documentation.
 The alternative is running it within a link:https://docs.microsoft.com/en-us/azure/devops/pipelines/agents/docker?view=azure-devops[docker container].
-Running a build agent inside docker generally comes with the problem of _sooner or later_ having to solve **docker in docker** issues, meaning a build step will require to run its own docker container inside the agent that is a docker container on its own.
+I decided to run the agent in a docker container because having docker as the only dependency on the host offers a wider solution space.
+The Dockerfile below is taken from the link:https://docs.microsoft.com/en-us/azure/devops/pipelines/agents/docker?view=azure-devops#linux[Azure docs].
 
-[plantuml]
+.Dockerfile for Azure Pipelines agent
+[source, docker]
 ....
-!includeurl https://gist.githubusercontent.com/anoff/d8f48105ac4d3c7b14ca8c34d6d54938/raw/7381f13a14e048bbd3cb4ecc70369e913908151a/anoff.plantuml
-!define ICONURL https://raw.githubusercontent.com/tupadr3/plantuml-icon-font-sprites/v2.1.0
-!includeurl ICONURL/common.puml
-!includeurl ICONURL/dev2/docker.puml
+FROM ubuntu:16.04
 
-node "Virtual Machine" as vm {
-  DEV2_DOCKER(outer, "Docker daeomon", artifact)
-  node "Build Agent [docker]" as agent{
-    card inner [
-      execute another
-      docker action
-      inside here
-    ]
-  }
+# To make it easier for build and release pipelines to run apt-get,
+# configure apt to not require confirmation (assume the -y argument by default)
+ENV DEBIAN_FRONTEND=noninteractive
+ENV DOCKER_VERSION="18.03.1-ce"
+RUN echo "APT::Get::Assume-Yes \"true\";" > /etc/apt/apt.conf.d/90assumeyes
+
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+        ca-certificates \
+        curl \
+        jq \
+        git \
+        iputils-ping \
+        libcurl3 \
+        libicu55 \
+        libunwind8 \
+        netcat
+
+# add docker CLI
+RUN curl -fsSL https://download.docker.com/linux/static/stable/x86_64/docker-$DOCKER_VERSION.tgz | \
+    tar zxvf - --strip 1 -C /usr/bin docker/docker
+
+WORKDIR /azp
+
+COPY ./start.sh ./start-once.sh ./
+RUN chmod +x start.sh start-once.sh
+....
+
+To actually run this dockerized build agent there are multiple options available on Azure.
+
+.Docker host options
+|===
+|Solution | Description | Challenge | Advantage
+
+|Virtual Machine
+|Using a simple virtual machine with the docker engine installed agents can be started
+|Scaling the VMs up and down
+|very simple solution
+
+|Virtual Machine Scale Set (VMSS)
+|VMSS allows creating multiple identical machines via an easy API e.g. count=4
+|when scaling down, Azure might pick a VM that is still actively running an agent/job
+|solves the scaling issue that VMs have
+
+|Azure Kubernetes Service (AKS)
+|a managed Kubernetes environment for running docker containers
+|need to orchestrate agent in Kubernetes
+|little operation responsibility and full control over hardware spec
+
+|Azure WebApp for Containers
+|run docker containers on a previously specified VM type without interacting with the VM directly
+|same as VMSS
+|abstracts VM and thereby reduces operational responsibility
+
+|Azure Container Instances (ACI)
+|run a docker container inside a fully managed docker environment
+|does not allow to specify VM type (only CPU count)
+|least operational responsibility
+
+|===
+
+== Cluster Autoscaler
+
+I chose to run on Azure Kubernetes Service (AKS) because using the right configuration it allows me to implement the **pay per use** and **scalability** almost out of the box.
+The key feature to achieve this is link:https://docs.microsoft.com/en-us/azure/aks/cluster-autoscaler[Cluster Autoscaler].
+Using Virtual Machine Scale Sets (VMSS) for the Kubernetes nodes this feature checks if there are enough resources in the cluster to host all pods.
+
+[NOTE]
+====
+A pod in Kubernetes is a group of Docker containers that are run together on the same host
+====
+
+If necessary the cluster autoscaler adds additional virtual machines to the Kubernetes cluster or removes them if they are idle for too long (~10minutes).
+In the following scenario each build agent is run in a separate pod.
+Each pod occupies so many resources as a single VM can provide.
+Thus if a new build agent is needed, one new VM will be needed.
+
+.Components involved in the Cluster Autoscaler
+[plantuml, cluster-autoscaler-comp, png]
+....
+@startuml
+!includeurl https://gist.githubusercontent.com/anoff/d8f48105ac4d3c7b14ca8c34d6d54938/raw/19261678934da0ab38a728f7edc1995ac22780ea/anoff.plantuml
+component "Cluster Autoscaler" as scaler
+frame "AKS" as aks {
+  node "pod" as p1
+  node "pod" as p2
 }
+frame "Virtual Machine\nScale set" as vmss {
+  node "VM" as vm1
+  node "VM" as vm2
+}
+p1 .. vm1
+p2 .. vm2
+aks -down- vmss
 
-outer -- agent
+scaler -> aks: check if all pods can be deployed
+scaler -> vmss: add/remove VMs into the set
+@enduml
 ....
+
+.How the cluster autoscaler works
+[plantuml, cluster-autoscaler-seq, png]
+....
+@startuml
+!includeurl https://gist.githubusercontent.com/anoff/d8f48105ac4d3c7b14ca8c34d6d54938/raw/19261678934da0ab38a728f7edc1995ac22780ea/anoff.plantuml
+|Cluster Autoscaler|
+start
+:check if pods in Kubernetes
+need additional resources
+to be deployed;
+if (resources\nneeded) then (yes)
+  :trigger scale up of VMSS;
+  |Virtual Machine\nScale Set|
+  :start a new virtual machine;
+  :register VM in the scale set;
+  |AKS|
+  :register the new VM as
+  node in the Kubernetes cluster;
+endif
+|Cluster Autoscaler|
+:check if nodes in Kubernetes
+are not running any pods;
+if (idling pods) then (yes)
+  :trigger scale down;
+  |AKS|
+  :remove the node from
+  the cluster;
+  |Virtual Machine\nScale Set|
+  :stop and delete the VM;
+endif
+@enduml
+....
+
+Another reason I chose the AKS solution is the fact that I am a little familiar with Kubernetes and Helm charts as ways of describing the system in code.
+With **automation** being another high level requirement I was worried that container instances and web apps might be a bit difficult to orchestrate throughout their lifecycle.
+Using AKS as a runtime for the agent fulfills the following requirements:
+
+. ✅ provide real _pay per use_ where idle time is reduced
+. ⚠️ support Linux and Windows agents: _Would require a separate node pool running link:https://docs.microsoft.com/en-us/azure/aks/windows-node-limitations[Windows nodes]_
+. ✅ run on specific VMs with special hardware requirements (CPU, GPU, disks)
+. ⚠️ share specific volumes between all runners e.g. cache files: _depending on the Helm configuration this is possible_
+. ✅ scale up to 20+ of agents
+. ✅ everything as code
+. ✅ state of the art UI with active directory authentication: _achieved by choosing Azure Pipelines as CI orchestrator_
+. ✅ scale down to as little agents as possible to reduce costs
+. ✅ minimal responsibility; as little code and operational efforts as possible
+
+[NOTE]
+====
+The exact implementation in Kubernetes will be part of a follow-up blog post
+====
+
+== Identifying agent demand
+
+To know how many build agents need to be running in the cluster we need to get information from Azure Pipelines about the number of `active jobs`.
+Active is defined as:
+
+[INFO]
+====
+active jobs = running jobs (already using an agent) + pending jobs (waiting for an agent to be assigned)
+====
+
+Sadly there are no webhooks available in Azure Pipelines that trigger when a new build job is being started.
+That is why I resorted to polling the Azure Pipelines API to get information about the build status.
+This can either be done with the HTTP API directly or using the **Azure CLI**.
+After installing the Azure CLI, an additional extension is needed to work with the Azure Pipelines (Azure DevOps) API.
+
+[source, bash]
+----
+az extension add --name azure-devops
+----
+
+The Azure Pipelines API is RESTful and therefore you need to get information per **Azure DevOps organization** and **project**.
+Each project may host multiple repositories and Azure Pipelines.
+So depending on your project setup this part of the solution might need to be adapted to identify the actual build jobs that can be handled by the agents deployed in the cluster.
+
+[source, bash]
+----
+az pipelines build list --organization 'https://dev.azure.com/anoff' --project 'AKS build test' --status=notStarted|inProgress -o json
+----
+
+[NOTE]
+====
+You can only use one of the `status` values per request
+To get all `active jobs` you need to run the command twice and add both numbers.
+====
+
+== Scaling to the correct amount of agents
+
+This is the part where things got a little tricky.
+The provided **Cluster Autoscaler** for AKS only takes care of scaling underlying resources.
+To allow resources to scale we need to remove/add build agent pods based on the active jobs.
+When there are more jobs than pod it should be rather easy to add more pods to the cluster.
+However when there are more pods (build agents) than there are active build jobs the solution needs to scale down.
+While some build agents are actively running jobs this is a stateful scenario where we want to identify exactly which pod should be taken down because its corresponding build agent is currently not actively running a build job.
+
+> Kubernetes becomes extremely complicated if your solution is not stateless
+
+In this scenario stateless means that we can treat all build agents the same.
+This is only true at a point where there are no active jobs in the system.
+But that point is also when all agents can be removed completely.
+Without an additional scale-down solution that would mean the cluster increasing in size and only scaling down once no builds are running.
+While this may work over a larger time window it was a too big trade-off for me to already be satisfied with it.
+
+The solution to this problem was combining the configuration options that the Azure Pipelines agent brings with the type of workloads that Kubernetes can run.
+My initial approach was to run **StatefulSet** in Kubernetes that allow running pods with mounted volumes (see requirements).
+However using the **Batch Jobs** API of Kubernetes it is possible to spawn pods that only run until the process inside the pod ends.
+Luckily there is a `--once` flag when staring an Azure Pipelines agent that terminates the agent after one job has been handled.
+This means that the number of `active jobs` just needs to be identical to the number of **Batch Jobs** inside the AKS cluster.
+After the build jobs are done the pod is automatically removed from the cluster and the **Cluster Autoscaler** will take care of removing the underlying hardware (VMSS) after it has been idling long enough.
+This scale-down scenario is really nice because it requires no state handling from the outside regarding the lifecycle of individual agents.
+
+> All agents are treated the same; they are started, they run a job, they stop, they get terminated.
